# task-24

./: .gitignore  README.md
c++/: CMakeLists.txt
c++/src/: main.cpp  server.cpp  server.h
c++/src/common/: Logger.h  SettingsManagement.h
c++/src/common/parser/: CMakeLists.txt
client/: requirements.txt  setup.py
client/src/: Client.py  MyButton.qml  MyTextInput.qml  __main__.py  prev__main__.py
client/src/parser/: parsTools.py
client/src/proto/: message_pb2.py
python/: MANIFEST.in  server_config.ini  setup.py
python/src/client/: Client.py  __main__.py  client.pyproject  main.qml
python/src/common/proto/: message_pb2.py
python/src/server/: Server.py  ServerProtocol.py  ServerSettingsManager.py  __main__.py
servers/qt/: CMakeLists.txt
servers/qt/src/: CMakeLists.txt  main.cpp  server.cpp  server.h
servers/qt/src/common/: CMakeLists.txt  Logger.h  SettingsManagement.h
servers/qt/src/parser/: CMakeLists.txt  parsTools.h
servers/qt/src/proto/: CMakeLists.txt  message.proto
